# vibeCoding

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: ci.yml
docs/decisions/: 2026-05-17-architecture-decisions-kr.md  2026-05-17-architecture-decisions.md  2026-05-21-construction-decisions-kr.md  2026-05-21-construction-decisions.md  2026-05-21-simulator-decisions-kr.md  2026-05-21-simulator-decisions.md
docs/design/: design-model-kr.md  design-model.md  domain-model-kr.md  domain-model.md  sw-architecture-kr.md  sw-architecture.md
docs/failures/: 2026-05-17-failures-and-resolutions-kr.md  2026-05-17-failures-and-resolutions.md  2026-05-21-failures-and-resolutions-kr.md  2026-05-21-failures-and-resolutions.md  2026-05-21-simulator-failures-kr.md  2026-05-21-simulator-failures.md
docs/requirements/: glossary-kr.md  glossary.md  preliminaryRequirments-kr.md  preliminaryRequirments.md  supplementary-specification-kr.md  vision-kr.md  (+6 more)
src/: CMakeLists.txt
src/app/: RvcController.cpp  RvcController.hpp  main.cpp
src/domain/: CleanPower.hpp  DefaultNavigationStrategy.cpp  DefaultNavigationStrategy.hpp  Direction.hpp  Heading.hpp  RvcState.hpp  SensorData.hpp
src/hal/: DustSensor.cpp  DustSensor.hpp  FrontSensor.cpp  FrontSensor.hpp  LeftSensor.cpp  LeftSensor.hpp  RightSensor.cpp  RightSensor.hpp
src/interfaces/: ICleanerController.hpp  IMotorController.hpp  INavigationStrategy.hpp  ISensor.hpp
src/simulator/: SimulatedCleaner.hpp  SimulatedMotor.hpp  SimulatedSensor.hpp  Simulator.cpp  Simulator.hpp
src/ui/: ConsoleDisplay.cpp  ConsoleDisplay.hpp  GridDisplay.cpp
(+6 files in other folders)
